--- a/CrudDataGrid/packages.config
+++ b/CrudDataGrid/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Angular.Material" version="1.1.12" targetFramework="net472" />
   <package id="angularjs" version="1.8.2" targetFramework="net472" />
   <package id="AngularJS.Animate" version="1.8.2" targetFramework="net472" />
   <package id="AngularJS.Aria" version="1.8.2" targetFramework="net472" />
@@ -14,7 +15,7 @@
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
   <package id="devexpress-web.TypeScript.DefinitelyTyped" version="0.7.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
-  <package id="jQuery" version="3.6.0" targetFramework="net472" />
+  <package id="jQuery" version="3.5.0" targetFramework="net472" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.2" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net472" />
