--- a/CrudDataGrid/packages.config
+++ b/CrudDataGrid/packages.config
@@ -12,6 +12,9 @@
   <package id="AngularJS.Touch" version="1.8.2" targetFramework="net472" />
   <package id="angularjs.TypeScript.DefinitelyTyped" version="6.5.6" targetFramework="net472" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
+  <package id="Autofac" version="3.4.0" targetFramework="net472" />
+  <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net472" />
+  <package id="AutoMapper" version="4.2.0" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
   <package id="devexpress-web.TypeScript.DefinitelyTyped" version="0.7.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
